updated html and css files. I worked on fixing the alignment and footer issues and was able to make the icons appear as I wanted.

--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,12 @@
     opacity: 0.7;
 }
 
+
 h3 {
     color: var(--main-header-col);
     font-weight: 500;
     font-size: 35px;
+    text-align: center;
 }
 
 .body-text {
@@ -57,13 +59,20 @@ h3 {
 
 .intro {
     align-self: center;
+    color: var(--main-header-col);
 }
 
 #image {
-    align-items: center;
     height: 300px;
     width: 320px; 
     border-radius: 50%;
+}
+
+/* MAIN BODY */
+main {
+    max-width: 88%;
+    margin-left:auto;
+    margin-right: auto;
 }
 
 /* WORK */
@@ -71,20 +80,41 @@ h3 {
     max-height: 100%;
 }
 
-/* CONTACT */
-#contact-me {
+.card-title {
+    color: var(--main-header-col);
+}
+
+/* SKILLS */
+.skills-card {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    border: var(--main-header-col);
+}
+
+.skills-list {
+    color: var(--body-text-col);
+}
+
+/* CONTACT */
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .contact-link {
     color: var(--body-text-col);
+    font-size: 18px;
+}
+
+.contact-link:hover {
+    color: var(--main-header-col);
+    text-decoration: none;
 }
 
 /* FOOTER */
 footer {
-    /* position: fixed;
-    left: 0;
-    bottom: 0; */
     width: 100%;
 }
